argocd/apps/goldilocks.yaml
apiVersion: v1
kind: Service
metadata:
  name: goldilocks-dashboard-nodeport
  namespace: goldilocks
  labels:
    app.kubernetes.io/name: goldilocks
    app.kubernetes.io/instance: goldilocks
    app.kubernetes.io/component: dashboard
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: goldilocks
    app.kubernetes.io/instance: goldilocks
    app.kubernetes.io/component: dashboard
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 31010

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goldilocks
  namespace: goldilocks
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: traefik-basicauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: goldilocks.atanuslab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goldilocks-dashboard
                port:
                  number: 80
